TF-for_each/instance.tf
resource "aws_instance" "public_instance" {
  count = 3
  ami                         = var.ami
  instance_type               = var.instance-type
  subnet_id                   = element(values(aws_subnet.pub-subnets), count.index).id
  associate_public_ip_address = true

  key_name = var.keypair

  tags = {
    Name = "${var.instance-name}-${count.index + 1}"
      }
}

resource "aws_instance" "private_instance" {
  count = 3
  ami                         = var.ami
  instance_type               = var.instance-type
  subnet_id                   = element(values(aws_subnet.pri-subnets), count.index).id
  associate_public_ip_address = true

  key_name = var.keypair

  tags = {
    Name = "private-instance-${count.index + 1}"
      }
}
